# crypto-arbitrage-mvp

./: .dockerignore  .gitignore  Dockerfile  README.md  config.acs.example.json  config.example.json  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
deploy/systemd/: crypto-arb-account-worker@.service  crypto-arb-log-compact.service  crypto-arb-log-compact.timer  crypto-arb-web@.service
scripts/: activate_blue_green.sh  compact_logs.py  deploy_cloud.sh  functional_stress_test.py
src/arbitrage_bot/: __init__.py  account_check.py  account_worker.py  alerts.py  asset_ledger.py  auto_buy_sell.py  auto_buy_sell_task.py  backtesting.py  config.py  contract_arbitrage.py  contract_strategies.py  cross_exchange_rebalancer.py  data_backup.py  deployment_guard.py  derivatives.py  dex_venues.py  emergency_hedge.py  exchanges.py  execution_algos.py  execution_protection.py  fill_store.py  funding_basis.py  grid_trading.py  hyperliquid_auth.py  jsonl_rotation.py  main.py  maintenance.py  market_maker.py  market_making.py  models.py  observability.py  options_monitor.py  order_reconciliation.py  order_reliability.py  order_validation.py  orderbook.py  orderbook_cache.py  orderbook_metrics.py  pnl.py  polymarket_arbitrage.py  (+20 more)
src/arbitrage_bot/strategies/: __init__.py  cash_and_carry.py  options_arbitrage.py  spot_spread.py  triangular.py
src/arbitrage_bot/web/: __init__.py  auth_views.py  config_versions.py  coordination.py  loops.py  (+13 more)
tests/: test_account_check.py  test_account_worker.py  test_alerts.py  test_asset_ledger.py  test_auto_buy_sell_task.py  test_backtesting.py  test_config.py  test_config_versions.py  test_contract_strategies.py  test_cross_exchange_rebalancer.py  test_deployment.py  test_dex_venues.py  test_exchanges.py  test_execution_algos.py  test_execution_protection.py  test_fill_store.py  test_grid_trading.py  test_hyperliquid_auth.py  test_log_compaction.py  test_market_maker_alerts.py  test_market_making.py  test_observability.py  test_order_reliability.py  test_order_validation.py  test_orderbook.py  test_orderbook_cache.py  test_polymarket_arbitrage.py  test_production_readiness.py  test_risk.py  test_slow_execution.py  test_slow_executor.py  test_solana.py  test_spot_arbitrage_executor.py  test_spot_grid_executor.py  test_strategies.py  test_strategy_center.py  test_strategy_coordination.py  test_strategy_lifecycle.py  test_strategy_performance.py  test_strategy_preflight.py  (+10 more)
(+5 files in other folders)
