[project]
name = "crypto-arbitrage-mvp"
version = "0.1.0"
description = "A dry-run crypto arbitrage scanner for spot spreads and spot-futures basis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
crypto-arb = "arbitrage_bot.main:main"
crypto-arb-web = "arbitrage_bot.web:main"
crypto-market-maker = "arbitrage_bot.market_maker:main"
crypto-auto-buy-sell = "arbitrage_bot.auto_buy_sell:main"
crypto-slow-executor = "arbitrage_bot.slow_executor:main"
crypto-strategy-timeline = "arbitrage_bot.strategy_timeline:main"

[tool.setuptools.package-data]
"arbitrage_bot.web" = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
